Fix: 채팅 상세정보 조회 수정